--- a/style.css
+++ b/style.css
@@ -35,5 +35,26 @@ body {
   border: 0.1rem solid black;
 }
 
+#content {
+  display: flex;
+  justify-content: center;
+  margin-top: 3rem;
+}
 
+#pixel-board {
+  display: flex;
+  flex-direction: column;
+  gap: 0;
+}
 
+.pixel-row {
+  display: flex;
+  gap: 0;
+}
+
+.pixel {
+  width: 4rem;
+  height: 4rem;
+  border: 1px solid rgb(0, 0, 0);
+  background-color: rgb(255, 255, 255);
+}
